Plugin
	ADDED:
        none
    CHANGED:
        none
    FIXED:
        none

Dialog Creator
	ADDED:
        support for custom background images
    CHANGED:
        removed all the static classes for main menu bar because it was lame
    FIXED:
        none

Shared between languages
	ADDED:
        none
    CHANGED:
        none
    FIXED:
        none

SQF
	ADDED:
        none
    CHANGED:
        none
    FIXED:
        none

Header
    ADDED:
        none
    CHANGED:
        none
    FIXED:
        none