@@ -1,0 +1,14 @@
+package com.kaylerrenslow.armaDialogCreator.arma.control;
+
+import com.kaylerrenslow.armaDialogCreator.gui.canvas.api.ui.Component;
+
+/**
+ @author Kayler
+ Base class for JavaFX canvas rendering of arma controls
+ Created on 05/20/2016.
+ */
+public class ArmaControlRenderer extends Component {
+	public ArmaControlRenderer() {
+		super(0, 0, 0, 0);
+	}
+}
