@@ -1,0 +1,7 @@
+package com.kaylerrenslow.armaDialogCreator.arma.header;
+
+/**
+ Created by Kayler on 05/21/2016.
+ */
+public interface IHeaderEntry {
+}
