@@ -1,0 +1,8 @@
+package com.kaylerrenslow.armaDialogCreator.arma.header;
+
+/**
+ Created by Kayler on 05/21/2016.
+ */
+public interface IHeaderFloatValue extends IHeaderValue {
+	double getInt();
+}
