@@ -10,5 +10,6 @@ public class ImagePaths {
 	public static final String BG_3 = prefix + "backgroundImages/image3.jpg";
 
 	public static final String ICON_FOLDER = prefix + "icons/folder.png";
+	public static final String ICON_APP = prefix + "icons/app.png";
 
 }
